--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-flip-move": "^3.0.4",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
